# CHUNSA001

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
addons/aeon_sim/cli/: main.cpp
addons/aeon_sim/core/include/aeon/: fatal.hpp  fixed64.hpp  vec2fx.hpp  wide128.hpp
addons/chunsa_sim/cli/: main.cpp
addons/chunsa_sim/core/include/chunsa/: ai_stub.hpp  checksum.hpp  cli_run.hpp  commands.hpp  data_catalog.hpp  driver.hpp  economy.hpp  entity_table.hpp  fatal.hpp  fixed64.hpp  flow_field.hpp  game_state.hpp  replay.hpp  rng.hpp  save_io.hpp  serialize.hpp  sha256.hpp  snapshot_ring.hpp  spatial_hash.hpp  step.hpp  vec2fx.hpp  vision.hpp  wide128.hpp
addons/chunsa_sim/gdextension/: chunsa_sim_node.cpp  chunsa_sim_node.h  register_types.cpp  register_types.h
data/: manifest.yaml
data/ai_profiles/: base_demo_normal.yaml
data/buildings/: egipto_chariotry_stable.yaml  egipto_settlement_center.yaml  egipto_shena_granary.yaml  rome_castra_barracks.yaml  rome_forum_center.yaml  rome_horreum.yaml
data/civilizations/: egipto_dynastic_nile.yaml  rome_republic_imperial.yaml
data/compiled/: chunsa_base.chdb  chunsa_base.chdb.content.json
data/game_data/research/verificacion/: REVISION_ARQUITECTO_SPRINT_0.4.md  VERIF_36a.md  VERIF_36b.md
data/maps/: base_demo_desert_basin.yaml
data/schemas/: ai-profile.schema.json  building.schema.json  civ.schema.json  common.schema.json  manifest.schema.json  map.schema.json  tech.schema.json  unit.schema.json
data/tech/: egipto_composite_bow_program.yaml  egipto_corvee_logistics.yaml  rome_marching_drill.yaml  rome_road_engineering.yaml
data/units/: egipto_chariot_warrior.yaml  egipto_work_crew.yaml  rome_ballista_crew.yaml  rome_camp_work_crew.yaml  rome_legionary.yaml
demo/: chunsa_base.chdb  chunsa_sim.gdextension  chunsa_sim.gdextension.uid  main.tscn  project.godot
docs/: ARRANQUE_ARQUITECTO_SPRINT_0.4.md  ARRANQUE_GPT_LUNA_SPRINT_1.1.md  ARRANQUE_GPT_LUNA_SPRINT_1.2.md  ARRANQUE_GPT_LUNA_SPRINT_1.3.md  DELEGACION_MODELOS.md  PLAN_MAESTRO.md  REPORTE_SPRINT_0.1A.md  REPORTE_SPRINT_0.1B.md  REPORTE_SPRINT_0.2.md  REPORTE_SPRINT_0.3.md  REPORTE_SPRINT_0.4.md  REPORTE_SPRINT_1.1.md  REPORTE_SPRINT_1.2.md  REPORTE_SPRINT_1.3.md  REVISION_SPRINT_0.4_DATOS.md  REVISION_SPRINT_1.1_KERNEL.md  REVISION_SPRINT_1.2_KERNEL.md  TOOLCHAIN.md
docs/briefs/: GPT_BUILDINGS_UI_RESULT.md  GPT_PRODUCCION_UI_1.2_RESULT.md  GPT_UI_HUD_1.3_RESULT.md  KIMI_DEMO_SHOWCASE.md  KIMI_DEMO_SHOWCASE_RESULT.md  KIMI_GDEXT_ADAPTER.md  KIMI_GDEXT_RESULT.md  KIMI_PLAYER_INPUT.md  KIMI_PLAYER_INPUT_RESULT.md  KIMI_RENDER_PROD.md  KIMI_RENDER_PROD_RESULT.md  KIMI_SPIKE_RENDER0.md  MINIMAX_ADAPTADOR_GODOT_DATADRIVEN.md  MINIMAX_ADAPTADOR_GODOT_DATADRIVEN_RESULT.md  MINIMAX_DATOS_EDIFICIOS_SPRINT_1.1.md  MINIMAX_DATOS_EDIFICIOS_SPRINT_1.1_RESULT.md  MINIMAX_DATOS_TECH_SPRINT_1.2.md  MINIMAX_DATOS_TECH_SPRINT_1.2_RESULT.md  MINIMAX_SCHEMAS_SPEC002.md  SONNET_COMBAT_RPS.md  SONNET_COMBAT_RPS_RESULT.md  SONNET_FLOWFIELD_MOVE.md  SONNET_FLOWFIELD_RESULT.md  SONNET_K1_REPLAY_V3_RESULT.md  SONNET_K1_REPLAY_V3_SPRINT_1.2.md  SONNET_K1_VICTORIA_PERFIL_RESULT.md  SONNET_K1_VICTORIA_PERFIL_SPRINT_1.4.md  SONNET_K2_IA_EXECUTE_SPRINT_1.4.md  SONNET_K2_PRODUCCION_TECH_RESULT.md  SONNET_K2_PRODUCCION_TECH_SPRINT_1.2.md  SONNET_KERNEL_DATOS_SPEC002.md  SONNET_KERNEL_DATOS_SPEC002_RESULT.md  SONNET_KERNEL_EDIFICIOS_SPRINT_1.1.md  SONNET_KERNEL_EDIFICIOS_SPRINT_1.1_RESULT.md  SONNET_MORALE.md  SONNET_MORALE_RESULT.md  TERRA_COMPILER_SPEC002.md
docs/specs/: SPEC-004_SISTEMAS_PARTIDA.md  SPEC-005_IA_OPONENTE.md  SPEC-006_UI_HUD.md
scripts_ci/: local_gates.sh
tests/data_compile/: yaml_profile_cases.json
tests/data_compile/invalid/: alias_anchor.yaml  float_speed.yaml  window_inverted.yaml  wrong_namespace.yaml
tests/data_compile/valid/: egipto_citizen.yaml  rome_marian_legionary.yaml
tests/determinism/golden/: fixed64_v1.csv  normalize_v1.csv
tests/unit/: test_aggro.cpp  test_buildings.cpp  test_combat.cpp  test_data_blob.cpp  test_economy.cpp  test_flow_field.cpp  test_flow_move.cpp  test_morale.cpp  test_production_tech.cpp  test_props.cpp  test_replay_v2.cpp  test_replay_v3.cpp  test_ring.cpp  test_state.cpp  test_victory_ai_profile.cpp
tools/data_compile/: chunsa_data_compiler.py  test_data_compiler.py  test_schemas.py
tools/golden_gen/: gen_golden.py
